chapter-4/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ssla.seorui.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: jsh-web
                port:
                  number: 83
  tls:
    - hosts:
        - ssla.seorui.com
        - sslb.seorui.com
        - sslc.seorui.com
      secretName: seorui
